# GCDF

./: Dockerfile  ReadMe.md  index.html
src/gcdf-planner/src/: CMakeLists.txt
src/gcdf-planner/src/mm_kinova/: CMakeLists.txt  package.xml
src/gcdf-planner/src/mm_kinova/include/mm_kinova/: moma_param.h
src/gcdf-planner/src/mm_kinova/urdf/: holonomic_mm_arm.urdf.xacro
src/gcdf-planner/src/planner/: CMakeLists.txt  package.xml
src/gcdf-planner/src/planner/config/: vis.yaml
src/gcdf-planner/src/planner/env/world_x[-6.00,6.00]_y[-6.00,6.00]_obs120_20251219_061529/: goal_list.txt  map.pcd
src/gcdf-planner/src/planner/include/planner/: planner_vis.h
src/gcdf-planner/src/planner/launch/: planner.launch
src/gcdf-planner/src/planner/msg/: SolverInput.msg  SolverInputList.msg
src/gcdf-planner/src/planner/rviz/: rviz.rviz
src/gcdf-planner/src/planner/script/: SolveMobileManipulatorExp.py  map_gen_four_quad.py
src/gcdf-planner/src/planner/src/: GenerateProblemMobileManipulator.cpp  pcd_map_node.cpp  planner_vis.cpp  planner_vis_node.cpp
src/gcdf-solver/: .gitignore
src/gcdf-solver/scripts/: nn_gcdf_l4casadi.py  test.py
src/gcdf-solver/src/: CMakeLists.txt
src/gcdf-solver/src/core/: CMakeLists.txt
src/gcdf-solver/src/core/include/common/: BasicTypes.h  ParametersManager.h  ValueFunction.h
src/gcdf-solver/src/core/include/cppad_core/: CppAdInterface.h
src/gcdf-solver/src/core/include/problem_core/: ConstraintFunction.h  ObjectiveFunction.h  OptimizationProblem.h
src/gcdf-solver/src/core/include/solver_core/: SolverInterface.h  SolverParameters.h
src/gcdf-solver/src/core/python/: pybindSolver.cpp  testPybind.cpp
src/gcdf-solver/src/core/src/cppad_core/: CppAdInterface.cpp
src/gcdf-training/: bf_sdf.py  data_generator.py  mlp.py  mp_ik.py  nn_gcdf.py  requiements.txt  utils.py
src/gcdf-training/resource/: .gitignore
src/gcdf-training/resource/models/: BP_8.pt
src/gcdf-training/resource/robot_layer/: mesh_test.py  moma_layer.py  moma_layer_pk.py  process_stl.py  remesh.py  renormolize.py  sum_mesh.py
src/gcdf-training/resource/robot_layer/meshes/moma/: armbracelet_link.STL  base_link.STL
src/gcdf-training/resource/urdf/: moma.urdf
