<?xml version="1.0"?>
<package format="2">
  <name>mm_kinova</name>
  <version>0.0.1</version>
  <description>Minimal Kinova mobile manipulator params and messages for visualization.</description>
  <maintainer email="hi@hi.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
</package>
